creusot/tests/should_fail/prusti/logic/home_mismatch2.stderr
error: expected `X` found `creusot_contracts::prusti::Zombie<X>`
 --> home_mismatch2.rs:6:5
  |
6 |     x
  |     ^

error: aborting due to 1 previous error

